Блок header страницы приведен к состоянию шаблона

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="shortcut icon" href="images/icons/favicon.ico">
 
   <!-- Подключены online шрифты -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800&subset=cyrillic" rel="stylesheet">
 
   <!-- <link rel="stylesheet" href="styles/reset.css"> -->
   <link rel="stylesheet" href="styles/main-1.0.css">
@@ -44,7 +44,8 @@
   <header class="page-header">
     <div class="container">
       <div class="page-header__column page-header__column--logo">
-        <a href="https://pokupo.ru/" title="Pokupo.ru">Pokupo.ru</a>
+        <!-- <a href="https://pokupo.ru/" title="Pokupo.ru">Pokupo.ru</a> -->
+        <a href="https://pokupo.ru/" title="Pokupo.ru"></a>
       </div>
       <div class="page-header__column page-header__column--menu-hamburger hamburger-wrapper">
         <span>Меню</span>
@@ -141,7 +142,8 @@
         <button class="header-icon header-icon--search">Search</button>
       </div> -->
       <div class="page-header__column page-header__column--login-seller">
-        <a href="https://seller.pokupo.ru/login" class="header-icon header-icon--login" title="Кабинет продавца">Login seller</a>
+        <!-- <a href="https://seller.pokupo.ru/login" class="header-icon header-icon--login" title="Кабинет продавца">Login seller</a> -->
+        <a href="https://seller.pokupo.ru/login" class="header-icon header-icon--login" title="Кабинет продавца"></a>
       </div>
       <div class="page-header__column page-header__column--registration-seller">
         <a href="https://pokupo.ru/partners#/registration_seller/" class="header-icon--registration"><span>Открыть магазин</span></a>
@@ -311,7 +313,7 @@
         <div class="page-footer__columns-left">
           <div class="page-footer__column page-footer__column--left">
             <ul>
-              <li class="contact-icon contact-icon--copyright">Pokupo.ru&nbsp;2014-2016</li>
+              <li class="contact-icon contact-icon--copyright">Pokupo.ru&nbsp;2014-2017</li>
               <li class="contact-icon contact-icon--email"><a href="mailto:support@pokupo.ru" title="E-mail">support@pokupo.ru</a></li>
               <li class="contact-icon contact-icon--skype"><a href="skype:pokupo.ru?chat" onclick="return skypeCheck()" title="Skype">pokupo.ru</a></li>
             </ul>
