Блок footer страницы приведен к состоянию шаблона

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         <div class="page-footer__columns-left">
           <div class="page-footer__column page-footer__column--left">
             <ul>
-              <li class="contact-icon contact-icon--copyright">Pokupo.ru&nbsp;2014-2017</li>
+              <li class="contact-icon contact-icon--copyright">Pokupo.ru&nbsp;2014</li>
               <li class="contact-icon contact-icon--email"><a href="mailto:support@pokupo.ru" title="E-mail">support@pokupo.ru</a></li>
               <li class="contact-icon contact-icon--skype"><a href="skype:pokupo.ru?chat" onclick="return skypeCheck()" title="Skype">pokupo.ru</a></li>
             </ul>
