--- a/index.html
+++ b/index.html
@@ -358,5 +358,11 @@
       </div> -->
     </div>
   </footer>
+
+  <!-- <script src="scripts/jquery-ui.js"></script>
+  <script src="scripts/jquery-1.js"></script>
+  <script src="scripts/jquery.colorbox-min.js"></script>
+  <script src="scripts/jquery.multiple.select.js"></script>
+  <script src="scripts/i18n/jquery.ui.datepicker-ru.js"></script> -->
 </body>
 </html>
