Стили страницы переделаны под новый дизайн (для десктопов)

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800&subset=cyrillic" rel="stylesheet">
 
   <!-- <link rel="stylesheet" href="styles/reset.css"> -->
-  <link rel="stylesheet" href="styles/main-1.0.css">
-  <link rel="stylesheet" href="styles/theme-1.0.css">
+  <!-- <link rel="stylesheet" href="styles/main-1.0.css">
+  <link rel="stylesheet" href="styles/theme-1.0.css"> -->
   <link rel="stylesheet" href="styles/header_footer_styles.css">
   <link rel="stylesheet" href="styles/header_footer_styles_display.css">
   <link rel="stylesheet" href="styles/registration_seller.css">
@@ -178,11 +178,13 @@
                                 <div class="tilesBox">
                                     <input id="type_seller_person" name="type_seller" type="radio" class="radio" value="person" checked="checked">
                                     <label for="type_seller_person">
-                                        <span class="tileElement person active" style="border: 3px solid rgb(9, 144, 51);">Частное лицо</span>
+                                        <!-- <span class="tileElement person active" style="border: 3px solid rgb(9, 144, 51);">Частное лицо</span> -->
+                                        <span class="tileElement person active">Частное лицо</span>
                                     </label>
                                     <input id="type_seller_company" name="type_seller" type="radio" class="radio" value="company">
                                     <label for="type_seller_company">
-                                        <span class="tileElement company" style="border: 2px solid rgb(204, 204, 204);">Компания</span>
+                                        <!-- <span class="tileElement company" style="border: 2px solid rgb(204, 204, 204);">Компания</span> -->
+                                        <span class="tileElement company">Компания</span>
                                     </label>
                                 </div>
                             </div>
