Добавлена адаптивность для экранов 360px

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
       <div class="page-header__column page-header__column--registration-seller">
         <a href="https://pokupo.ru/partners#/registration_seller/" class="header-icon--registration"><span>Открыть магазин</span></a>
       </div>
+      <div class="page-header__line"></div>
     </div>
     <!-- <div class="page-header__column--submenu"></div> -->
   </header>
@@ -257,14 +258,14 @@
                                 <div class="input-holder">
                                     <input id="iagree" name="iagree" type="checkbox" class="checkbox">
                                     <label for="iagree" class="block-label b-small-text iagree-label">Я принимаю условия <a href="https://pokupo.ru/rules" target="_blank">пользовательского соглашения</a>,
-                                        <br><a href="https://pokupo.ru/police" target="_blank">правил конфиденциальности</a> и <a href="https://pokupo.ru/refund" target="_blank">политики возврата платежей</a>
+                                        <a href="https://pokupo.ru/police" target="_blank">правил конфиденциальности</a> и&nbsp;<a href="https://pokupo.ru/refund" target="_blank">политики возврата платежей</a>
                                     </label>
                                     <div style="display: none; color: red; margin-top: 15px; font-weight: bold" class="iagree-req-message">Для регистрации необходимо согласиться с условиями</div>
                                 </div>
                             </div>
 
                             <div id="submit">
-                                <button class="button buttonGetCode">Получить код на email</button>
+                                <button class="button buttonGetCode">Получить код на e-mail</button>
                             </div>
 
                         </div>
